# openCV-JPEG

./: CMakeLists.txt  JPEG.cpp  JPEG.hpp  QTable.hpp  main.cpp
